# fsedc

./: .editorconfig  .gitignore  README.md  crawlers.py  dcat_minimum.json  main.py  metadata.py  metadata_urls.py  pyproject.toml  pytest.ini  requirements.txt
.docker/: compose.yml
.docker/pgsql/: README.md  compose.yml
dadaforest/: .dockerignore  .env.template  Dockerfile  config.py  manage.py  requirements.txt
dadaforest/apps/catalog/: admin.py  forms.py  models.py  urls.py  views.py
dadaforest/apps/catalog/management/commands/: load_fs_data.py
dadaforest/apps/catalog/migrations/: 0001_added_catalog_search_term.py  0002_added_catalog_domain.py  0003_added_asset_and_keyword.py
dadaforest/apps/catalog/templates/catalog/: asset_detail.html  asset_search_results.html  base.html  map.html
dadaforest/crawlers/: crawlers.py
dadaforest/dadaforest/: asgi.py  settings.py  urls.py  wsgi.py
dadaforest/templates/admin/: base.html
tests/: test_crawlers.py  test_metadata.py
